Added perl module and example

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 www.box.com api implementation
 
+development version, not ready for production
+
+You need an API Key and Auth token from box.com to run this
 
